cluster/connector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: connector
  labels:
    app: connector
