cluster/connector/connector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connector
spec:
  selector:
    matchLabels:
      app: connector
  template:
    metadata:
      labels:
        app: connector
    spec:
      containers:
        - name: connector
          image: ghcr.io/imec-int/edc-extensions/sovity-xce:latest
          ports:
            - containerPort: 12001
              name: http-public
            - containerPort: 11001
              name: http
            - containerPort: 11002
              name: management
            - containerPort: 11003
              name: protocol
            - containerPort: 11004
              name: control
          startupProbe:
            httpGet:
              path: /api/check/startup
              port: http
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: /api/check/liveness
              port: http
          readinessProbe:
            httpGet:
              path: /api/check/readiness
              port: http
          volumeMounts:
            - name: connector-keystore
              mountPath: /app/keystore.p12
              subPath: keystore.p12
              readOnly: true
      volumes:
        - name: connector-keystore
          secret:
            secretName: certs
            items:
              - key: keystore.p12
                path: keystore.p12
---
apiVersion: v1
kind: Service
metadata:
  name: connector
spec:
  selector:
    app: connector
  ports:
    - name: http-public
      port: 12001
      targetPort: http-public
    - name: http
      port: 11001
      targetPort: http
    - name: management
      port: 11002
      targetPort: management
    - name: protocol
      port: 11003
      targetPort: protocol
    - name: control
      port: 11004
      targetPort: control
